--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,11 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:2.2.15"
     implementation "io.reactivex.rxjava2:rxkotlin:2.4.0"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+    // card view
+    implementation "androidx.cardview:cardview:1.0.0"
+    // card stack view
+    implementation "com.yuyakaido.android:card-stack-view:2.3.4"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
