--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
     // image library
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    // google admob
+    implementation 'com.google.android.gms:play-services-ads:19.3.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
