--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -9,8 +10,8 @@ android {
         applicationId "com.showmiso.swipecontacts"
         minSdkVersion 23
         targetSdkVersion 29
-        versionCode 3
-        versionName "1.3"
+        versionCode 4
+        versionName "1.14"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -42,6 +43,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     // google admob
     implementation 'com.google.android.gms:play-services-ads:19.3.0'
+    // google analytics
+    implementation 'com.google.firebase:firebase-analytics:17.4.4'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
