--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:19.3.0'
     // google analytics
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    // tablayout
+    implementation 'com.google.android.material:material:1.2.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
